add og tag, static image

--- a/pythonProject/04_ShoppingMall/templates/index.html
+++ b/pythonProject/04_ShoppingMall/templates/index.html
@@ -22,6 +22,10 @@
 
     <title>원페이지쇼핑몰</title>
 
+    <meta property="og:title" content="산곡동 왕개발자가 만든 페이지" />
+    <meta property="og:description" content="이거이거 어마어마해" />
+    <meta property="og:image" content="{{ url_for('static', filename='ogpng.jpeg') }}" />
+
     <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
 
     <style>
